--- a/form.html
+++ b/form.html
@@ -1,4 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+
     <body>
         <h2>notepad</h2>
     <form method = "POST" action = "http://localhost:5000/add_user">
